update the website

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,25 +10,39 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
     <div class="header header--color">
-        <div class="header--amazon_logo hover cursor" ><img class="header--amazon_logo_img"src="./images/amazon_logo.png" alt="amazon logo"></div>
+        <div class="header--amazon_logo hover cursor"><img class="header--amazon_logo_img"
+                src="./images/amazon_logo.png" alt="amazon logo"></div>
         <div class="header--select_address hover cursor">
             <p class="hello">Hello</p>
             <p class="address"><i class="fa fa-map-marker fa-1x icon" aria-hidden="true"></i>Select Your Address</p>
         </div>
-        <div class="header--searchbox cursor"><input class="searchbox" type="search" >
-            <div class="amazon_fashion"><p class="amazon_fashion_p">Amazon fashion <i class="fa fa-sort-desc" aria-hidden="true"></i></p></div>
+        <div class="header--searchbox cursor"><input class="searchbox" type="search">
+            <div class="amazon_fashion">
+                <p class="amazon_fashion_p">Amazon fashion <i class="fa fa-sort-desc" aria-hidden="true"></i></p>
+            </div>
             <div class="search_logo"><i class="fa fa-search fa-4x fa-search_logo-logo" aria-hidden="true"></i></div>
         </div>
         <div class="header--lang hover cursor"><img class="flag" src="./images/flag.png" alt="flag"> </div>
-        <div class="header--signin hover cursor"><p class="header--signin-p">Hello, sign in</p><p class="header--signin_ac">Account & lists<i class="fa fa-sort-desc" aria-hidden="true"></i></p></div>
-        <div class="header--returns hover cursor"><p class="header--signin-p">Returns</p><p class="header--signin_ac">& Orders</p></div>
-        <div class="header--cart cursor hover"><i class="fa fa-cart-arrow-down icon fa-5x" aria-hidden="true"></i><p class="header--cart_p">Cart</p></div>
+        <div class="header--signin hover cursor">
+            <p class="header--signin-p">Hello, sign in</p>
+            <p class="header--signin_ac">Account & lists<i class="fa fa-sort-desc" aria-hidden="true"></i></p>
+        </div>
+        <div class="header--returns hover cursor">
+            <p class="header--signin-p">Returns</p>
+            <p class="header--signin_ac">& Orders</p>
+        </div>
+        <div class="header--cart cursor hover"><i class="fa fa-cart-arrow-down icon fa-5x" aria-hidden="true"></i>
+            <p class="header--cart_p">Cart</p>
+        </div>
     </div>
     <div class="navigationBar">
         <div class="navigationBar--child ">
-            <div class="child_bar1 fontSize hover cursor "><i class="fa fa-bars fa-1x" aria-hidden="true"></i> <p class="all">All</p></div>
+            <div class="child_bar1 fontSize hover cursor "><i class="fa fa-bars fa-1x" aria-hidden="true"></i>
+                <p class="all">All</p>
+            </div>
             <div class="child_bar2 fontSize hover cursor common">Best Sellers</div>
             <div class="child_bar3 fontSize hover cursor common">Todays Deals</div>
             <div class="child_bar4 fontSize hover cursor common">Mobiles</div>
@@ -36,12 +51,35 @@
             <div class="child_bar7 fontSize hover cursor common">Home & kitchen</div>
             <div class="child_bar8 fontSize hover cursor common">Fashion</div>
             <div class="child_bar9 fontSize hover cursor common">Books</div>
-            <div class="child_bar10 fontSize hover cursor common">Prime<i class="fa fa-sort-desc" aria-hidden="true"></i></div>
+            <div class="child_bar10 fontSize hover cursor common">Prime<i class="fa fa-sort-desc"
+                    aria-hidden="true"></i></div>
         </div>
         <div class="navigationBar--prime cursor hover">
-            <div class="prime1"><p class="breathe">BREATHE </p><p class="breathe"> INTO THE SHADOWS</p></div>
-            <div class="prime2"><p class="join">Join Prime starting &#8377 179</p><p class="primevideo">*redirects to primevideo.com</p></div>
+            <div class="prime1">
+                <p class="breathe">BREATHE </p>
+                <p class="breathe"> INTO THE SHADOWS</p>
+            </div>
+            <div class="prime2">
+                <p class="join">Join Prime starting &#8377 179</p>
+                <p class="primevideo">*redirects to primevideo.com</p>
+            </div>
         </div>
     </div>
+    <div class="amazonfashion">
+        <div class="amazonfashion--fashion cursor">Amazon Fashion</div>
+        <div class="amazonfashion--women common--features cursor hover--amazonfashion">Women</div>
+        <div class="amazonfashion--men common--features cursor hover--amazonfashion">Men</div>
+        <div class="amazonfashion--kids common--features cursor hover--amazonfashion">Kids</div>
+        <div class="amazonfashion--luggage common--features cursor hover--amazonfashion">Bags & luggage</div>
+        <div class="amazonfashion--sportswear common--features cursor hover--amazonfashion">Sportswear</div>
+        <div class="amazonfashion--sales common--features cursor hover--amazonfashion">Sales & Deals</div>
+        <div class="amazonfashion--dayreturns cursor">30 DAY RETURNS <p class="restrictions ">Restrictions Apply*</p></div>
+    </div>
+    <hr>
+    <div class="deals">
+        <div class="deals--under199"><img class="under199" src="./images/under199.jpg" alt="under199 deal"></div>
+        <div class="deals--discount"><img class="discount1" src="./images/discount.jpeg" alt=""> <img class="discount2" src="./images/earn.jpg" alt=""></div>
+    </div>
 </body>
+
 </html>
