update in main content

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="icon" href="./images/R.png" type="images/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script> -->
+
 </head>
 
 <body>
@@ -17,9 +24,10 @@
                 src="./images/amazon_logo.png" alt="amazon logo"></div>
         <div class="header--select_address hover cursor">
             <p class="hello">Hello</p>
-            <p class="address"><i class="fa fa-map-marker fa-1x icon" aria-hidden="true"></i>Select Your Address</p>
+            <strong class="address"><i class="fa fa-map-marker fa-1x icon" aria-hidden="true"></i>Select Your
+                Address</strong>
         </div>
-        <div class="header--searchbox cursor"><input class="searchbox" type="search">
+        <div class="header--searchbox cursor"><input class="searchbox" type="text">
             <div class="amazon_fashion">
                 <p class="amazon_fashion_p">Amazon fashion <i class="fa fa-sort-desc" aria-hidden="true"></i></p>
             </div>
@@ -73,13 +81,41 @@
         <div class="amazonfashion--luggage common--features cursor hover--amazonfashion">Bags & luggage</div>
         <div class="amazonfashion--sportswear common--features cursor hover--amazonfashion">Sportswear</div>
         <div class="amazonfashion--sales common--features cursor hover--amazonfashion">Sales & Deals</div>
-        <div class="amazonfashion--dayreturns cursor">30 DAY RETURNS <p class="restrictions ">Restrictions Apply*</p></div>
+        <div class="amazonfashion--dayreturns cursor">30 DAY RETURNS <p class="restrictions ">Restrictions Apply*</p>
+        </div>
     </div>
     <hr>
-    <div class="deals">
-        <div class="deals--under199"><img class="under199" src="./images/under199.jpg" alt="under199 deal"></div>
-        <div class="deals--discount"><img class="discount1" src="./images/discount.jpeg" alt=""> <img class="discount2" src="./images/earn.jpg" alt=""></div>
     </div>
+    <!-- main content -->
+    <div class="main">
+        <img class="main--shoppay_img" src="./images/rblbank.jpg" alt="">
+        <div class="main--shoppay">
+            <h2>Upgrade your home | Amazon Brands & more </h2>
+            <div class="grid">
+                <div class="cursor"><img class="main--livingroom_img" src="./images/ledtv.jpg" alt="">Smart LED TVs</div>
+                <div class="cursor"><img class="main--livingroom_img" src="./images/fridge.jpg" alt="">Appliances</div>
+                <div class="cursor"><img class="main--livingroom_img" src="./images/furniture.jpg" alt="">Furniture</div>
+                <div class="cursor"><img class="main--livingroom_img" src="./images/kitchen.jpg" alt="">Kitchen products</div>
+            </div>
+            <p ><a href="http://127.0.0.1:5500/index.html">Shop now</a></p>
+        </div>
+        <div class="main--livingroom main--shoppay">
+            <h2>Redefine your living room</h2>
+            <div class="grid">
+                <div class="cursor"><img class="main--livingroom_img" src="./images/sofa.jpg" alt="">Sofa cum beds</div>
+                <div class="cursor"><img class="main--livingroom_img" src="./images/chair.jpg" alt="">Office chairs & study
+                tables</div>
+                <div class="cursor"><img class="main--livingroom_img" src="./images/beanbag.jpg" alt="">Bean bags</div>
+                <div class="cursor"><img class="main--livingroom_img" src="./images/diningtable.jpg" alt="">Explore all</div>
+            </div>
+            <a href="http://127.0.0.1:5500/index.html">Visit our furniture store</a>
+        </div>
+        <div class="main--tools main--shoppay">
+            <h3>Shop & Pay | Earn rewards daily</h3>
+            <img src="./images/shop_pay1.jpg" alt="">
+        </div>
+    </div>
+
 </body>
 
 </html>
