update the main portion of amazon website

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <p ><a href="http://127.0.0.1:5500/index.html">Shop now</a></p>
         </div>
         <div class="main--livingroom main--shoppay">
-            <h2>Redefine your living room</h2>
+            <h2>Redefine your living room with amazon</h2>
             <div class="grid">
                 <div class="cursor"><img class="main--livingroom_img" src="./images/sofa.jpg" alt="">Sofa cum beds</div>
                 <div class="cursor"><img class="main--livingroom_img" src="./images/chair.jpg" alt="">Office chairs & study
@@ -111,9 +111,21 @@
             <a href="http://127.0.0.1:5500/index.html">Visit our furniture store</a>
         </div>
         <div class="main--tools main--shoppay">
-            <h3>Shop & Pay | Earn rewards daily</h3>
-            <img src="./images/shop_pay1.jpg" alt="">
+            <h2>Top rated, premium quality | Amazon Brands & more </h2>
+            <div class="grid">
+                <div class="cursor"><img class="main--livingroom_img" src="./images/clothing.jpg" alt="">Clothing</div>
+                <div class="cursor"><img class="main--livingroom_img" src="./images/footwear.jpg" alt="">Footwear</div>
+                <div class="cursor"><img class="main--livingroom_img" src="./images/watches.jpg" alt="">Watches</div>
+                <div class="cursor"><img class="main--livingroom_img" src="./images/bags.jpg" alt="">Bags & luggage</div>
+            </div>
+            <a href="http://127.0.0.1:5500/index.html">See all offers</a>
         </div>
+        <div class="main-signin">
+            <div class="main--signin1">Sign in for your best experiene
+                <button class="main--button cursor">Sign in securely</button>
+            </div>
+            <div><img  class="main-laptop_img"src="./images/laptop.jpg" alt="laptop"></div>
+        </div>    
     </div>
 
 </body>
