update in website

--- a/index.html
+++ b/index.html
@@ -124,10 +124,52 @@
             <div class="main--signin1">Sign in for your best experiene
                 <button class="main--button cursor">Sign in securely</button>
             </div>
-            <div><img  class="main-laptop_img"src="./images/laptop.jpg" alt="laptop"></div>
+            <div class="main--laptop"><img  class="main-laptop_img"src="./images/laptop.jpg" alt="laptop">Sponsered</div>
         </div>    
     </div>
+    <div class="main-sibling">
+       <div class="main--shoppay1">
+        <h2>Up to 60% off | Professional tools,...</h2>
+        <div class="grid">
+            <div class="cursor"><img class="main--livingroom_img" src="./images/professional_tools.jpg" alt="">Professional tools</div>
+            <div class="cursor"><img class="main--livingroom_img" src="./images/testing.jpg" alt="">Testing & measuring instruments</div>
+            <div class="cursor"><img class="main--livingroom_img" src="./images/welding.jpg" alt="">Welding machines</div>
+            <div class="cursor"><img class="main--livingroom_img" src="./images/handpicked.jpg" alt="">Handicked offers</div>
+        </div>
+        <a href="http://127.0.0.1:5500/index.html">See more</a>
+       </div>
+       <div class="main--shoppay1">
+        <h2>Shop by Category | Mobiles | Electronics</h2>
+        <div class="grid">
+            <div class="cursor"><img class="main--livingroom_img" src="./images/fresh.jpg" alt="">Fresh</div>
+            <div class="cursor"><img class="main--livingroom_img" src="./images/mobiles.jpg" alt="">Mobiles</div>
+            <div class="cursor"><img class="main--livingroom_img" src="./images/fashion.jpg" alt="">Fashion</div>
+            <div class="cursor"><img class="main--livingroom_img" src="./images/Electronic.jpg" alt="">Electronics</div>
+        </div>
+        <a href="http://127.0.0.1:5500/index.html">See more</a>
+       </div>
+       <div class="main--shoppay1">
+        <h2>Top picks for your home | All Electronics</h2>
+        <div class="grid">
+            <div class="cursor"><img class="main--livingroom_img" src="./images/Appliances.jpg" alt="">Air conditioners</div>
+            <div class="cursor"><img class="main--livingroom_img" src="./images/refrigerator.jpg" alt="">Refrigerators</div>
+            <div class="cursor"><img class="main--livingroom_img" src="./images/microvave.jpg" alt="">Microwaves</div>
+            <div class="cursor"><img class="main--livingroom_img" src="./images/washingmachine.jpg" alt="">Washing machines</div>
+        </div>
+        <a href="http://127.0.0.1:5500/index.html">See more</a>
+       </div>
+       <div class="main--shoppay2">
+        <h2>Exclusive offers on travel tickets</h2>
+        <div class="grid">
+            <div class="cursor"><img class="main--livingroom_img" src="./images/flight.jpg" alt="">Get up to &#8377 2000 off on flights </div>
+            <div class="cursor"><img class="main--livingroom_img" src="./images/Bus.jpg" alt="">Guaranteed rewards on bus tickets</div>
+            <div class="cursor"><img class="main--livingroom_img" src="./images/Train.jpg" alt="">Zero convenience fees on train tickets</div>
+            <div class="cursor"><img class="main--livingroom_img" src="./images/travel_acces.jpg" alt="">Products for your travel needs</div>
+        </div>
+        <a href="http://127.0.0.1:5500/index.html">See all offers</a>
+       </div>
 
+    </div>
 </body>
 
 </html>
